verve patch/base/Applications/shakespeare/grammar.output
Grammar

    0 $accept: StartSymbol $end

    1 Act: ActHeader Scene
    2    | Act Scene

    3 ActHeader: ACT_ROMAN COLON Comment EndSymbol
    4          | ACT_ROMAN COLON Comment error
    5          | ACT_ROMAN error Comment EndSymbol

    6 Adjective: POSITIVE_ADJECTIVE
    7          | NEUTRAL_ADJECTIVE
    8          | NEGATIVE_ADJECTIVE

    9 BinaryOperator: THE_DIFFERENCE_BETWEEN
   10               | THE_PRODUCT_OF
   11               | THE_QUOTIENT_BETWEEN
   12               | THE_REMAINDER_OF_THE_QUOTIENT_BETWEEN
   13               | THE_SUM_OF

   14 CharacterDeclaration: CHARACTER COMMA Comment EndSymbol
   15                     | error COMMA Comment EndSymbol
   16                     | CHARACTER error Comment EndSymbol

   17 CharacterDeclarationList: CharacterDeclaration
   18                         | CharacterDeclarationList CharacterDeclaration

   19 CharacterList: CHARACTER AND CHARACTER
   20              | CHARACTER COMMA CharacterList

   21 Comment: String
   22        | error

   23 Comparative: NegativeComparative
   24            | PositiveComparative

   25 Comparison: NOT NonnegatedComparison
   26           | NonnegatedComparison

   27 Conditional: IF_SO
   28            | IF_NOT

   29 Constant: ARTICLE UnarticulatedConstant
   30         | FIRST_PERSON_POSSESSIVE UnarticulatedConstant
   31         | SECOND_PERSON_POSSESSIVE UnarticulatedConstant
   32         | THIRD_PERSON_POSSESSIVE UnarticulatedConstant
   33         | NOTHING

   34 EndSymbol: QuestionSymbol
   35          | StatementSymbol

   36 EnterExit: LEFT_BRACKET ENTER CHARACTER RIGHT_BRACKET
   37          | LEFT_BRACKET ENTER CharacterList RIGHT_BRACKET
   38          | LEFT_BRACKET EXIT CHARACTER RIGHT_BRACKET
   39          | LEFT_BRACKET EXEUNT CharacterList RIGHT_BRACKET
   40          | LEFT_BRACKET EXEUNT RIGHT_BRACKET
   41          | LEFT_BRACKET ENTER error RIGHT_BRACKET
   42          | LEFT_BRACKET EXIT error RIGHT_BRACKET
   43          | LEFT_BRACKET EXEUNT error RIGHT_BRACKET
   44          | LEFT_BRACKET error RIGHT_BRACKET

   45 Equality: AS Adjective AS
   46         | AS error AS
   47         | AS Adjective error

   48 Inequality: Comparative THAN
   49           | Comparative error

   50 InOut: OpenYour HEART StatementSymbol
   51      | SPEAK SECOND_PERSON_POSSESSIVE MIND StatementSymbol
   52      | LISTEN_TO SECOND_PERSON_POSSESSIVE HEART StatementSymbol
   53      | OpenYour MIND StatementSymbol
   54      | OpenYour error StatementSymbol
   55      | SPEAK error MIND StatementSymbol
   56      | LISTEN_TO error HEART StatementSymbol
   57      | SPEAK SECOND_PERSON_POSSESSIVE error StatementSymbol
   58      | LISTEN_TO SECOND_PERSON_POSSESSIVE error StatementSymbol
   59      | OpenYour HEART error
   60      | SPEAK SECOND_PERSON_POSSESSIVE MIND error
   61      | LISTEN_TO SECOND_PERSON_POSSESSIVE HEART error
   62      | OpenYour MIND error

   63 Jump: JumpPhrase ACT_ROMAN StatementSymbol
   64     | JumpPhrase SCENE_ROMAN StatementSymbol
   65     | JumpPhrase error StatementSymbol

   66 JumpPhrase: JumpPhraseBeginning JumpPhraseEnd
   67           | error JumpPhraseEnd
   68           | JumpPhraseBeginning error

   69 JumpPhraseBeginning: LET_US
   70                    | WE_MUST
   71                    | WE_SHALL

   72 JumpPhraseEnd: PROCEED_TO
   73              | RETURN_TO

   74 Line: CHARACTER COLON SentenceList
   75     | CHARACTER COLON error
   76     | CHARACTER error SentenceList

   77 NegativeComparative: NEGATIVE_COMPARATIVE
   78                    | MORE NEGATIVE_ADJECTIVE
   79                    | LESS POSITIVE_ADJECTIVE

   80 NegativeConstant: NegativeNoun
   81                 | NEGATIVE_ADJECTIVE NegativeConstant
   82                 | NEUTRAL_ADJECTIVE NegativeConstant

   83 NegativeNoun: NEGATIVE_NOUN

   84 NonnegatedComparison: Equality
   85                     | Inequality

   86 OpenYour: OPEN SECOND_PERSON_POSSESSIVE
   87         | OPEN error

   88 Play: Title CharacterDeclarationList Act
   89     | Play Act
   90     | Title CharacterDeclarationList error
   91     | Title error Act
   92     | error CharacterDeclarationList Act

   93 PositiveComparative: POSITIVE_COMPARATIVE
   94                    | MORE POSITIVE_ADJECTIVE
   95                    | LESS NEGATIVE_ADJECTIVE

   96 PositiveConstant: PositiveNoun
   97                 | POSITIVE_ADJECTIVE PositiveConstant
   98                 | NEUTRAL_ADJECTIVE PositiveConstant

   99 PositiveNoun: NEUTRAL_NOUN
  100             | POSITIVE_NOUN

  101 Pronoun: FIRST_PERSON
  102        | FIRST_PERSON_REFLEXIVE
  103        | SECOND_PERSON
  104        | SECOND_PERSON_REFLEXIVE

  105 Question: BE Value Comparison Value QuestionSymbol
  106         | BE error Comparison Value QuestionSymbol
  107         | BE Value error Value QuestionSymbol
  108         | BE Value Comparison error QuestionSymbol

  109 QuestionSymbol: QUESTION_MARK

  110 Recall: RECALL String StatementSymbol
  111       | RECALL error StatementSymbol
  112       | RECALL String error

  113 Remember: REMEMBER Value StatementSymbol
  114         | REMEMBER error StatementSymbol
  115         | REMEMBER Value error

  116 Scene: SceneHeader SceneContents

  117 SceneContents: EnterExit
  118              | Line
  119              | SceneContents EnterExit
  120              | SceneContents Line

  121 SceneHeader: SCENE_ROMAN COLON Comment EndSymbol
  122            | SCENE_ROMAN COLON Comment error
  123            | SCENE_ROMAN error Comment EndSymbol

  124 Sentence: UnconditionalSentence
  125         | Conditional COMMA UnconditionalSentence
  126         | Conditional error UnconditionalSentence

  127 SentenceList: Sentence
  128             | SentenceList Sentence

  129 StartSymbol: Play

  130 Statement: SECOND_PERSON BE Constant StatementSymbol
  131          | SECOND_PERSON UnarticulatedConstant StatementSymbol
  132          | SECOND_PERSON BE Equality Value StatementSymbol
  133          | SECOND_PERSON BE Constant error
  134          | SECOND_PERSON BE error StatementSymbol
  135          | SECOND_PERSON error Constant StatementSymbol
  136          | SECOND_PERSON UnarticulatedConstant error
  137          | SECOND_PERSON error StatementSymbol
  138          | SECOND_PERSON BE Equality Value error
  139          | SECOND_PERSON BE Equality error StatementSymbol
  140          | SECOND_PERSON BE error Value StatementSymbol
  141          | SECOND_PERSON error Equality Value StatementSymbol

  142 StatementSymbol: EXCLAMATION_MARK
  143                | PERIOD

  144 String: StringSymbol
  145       | String StringSymbol

  146 StringSymbol: ARTICLE
  147             | BE
  148             | CHARACTER
  149             | FIRST_PERSON
  150             | FIRST_PERSON_POSSESSIVE
  151             | FIRST_PERSON_REFLEXIVE
  152             | NEGATIVE_ADJECTIVE
  153             | NEGATIVE_COMPARATIVE
  154             | NEGATIVE_NOUN
  155             | NEUTRAL_ADJECTIVE
  156             | NEUTRAL_NOUN
  157             | NOTHING
  158             | POSITIVE_ADJECTIVE
  159             | POSITIVE_COMPARATIVE
  160             | POSITIVE_NOUN
  161             | SECOND_PERSON
  162             | SECOND_PERSON_POSSESSIVE
  163             | SECOND_PERSON_REFLEXIVE
  164             | THIRD_PERSON_POSSESSIVE
  165             | COMMA
  166             | AND
  167             | AS
  168             | ENTER
  169             | EXEUNT
  170             | EXIT
  171             | HEART
  172             | IF_NOT
  173             | IF_SO
  174             | LESS
  175             | LET_US
  176             | LISTEN_TO
  177             | MIND
  178             | MORE
  179             | NOT
  180             | OPEN
  181             | PROCEED_TO
  182             | RECALL
  183             | REMEMBER
  184             | RETURN_TO
  185             | SPEAK
  186             | THAN
  187             | THE_CUBE_OF
  188             | THE_DIFFERENCE_BETWEEN
  189             | THE_FACTORIAL_OF
  190             | THE_PRODUCT_OF
  191             | THE_QUOTIENT_BETWEEN
  192             | THE_REMAINDER_OF_THE_QUOTIENT_BETWEEN
  193             | THE_SQUARE_OF
  194             | THE_SQUARE_ROOT_OF
  195             | THE_SUM_OF
  196             | TWICE
  197             | WE_MUST
  198             | WE_SHALL
  199             | ACT_ROMAN
  200             | SCENE_ROMAN
  201             | ROMAN_NUMBER
  202             | NONMATCH

  203 Title: String EndSymbol

  204 UnarticulatedConstant: PositiveConstant
  205                      | NegativeConstant

  206 UnaryOperator: THE_CUBE_OF
  207              | THE_FACTORIAL_OF
  208              | THE_SQUARE_OF
  209              | THE_SQUARE_ROOT_OF
  210              | TWICE

  211 UnconditionalSentence: InOut
  212                      | Jump
  213                      | Question
  214                      | Recall
  215                      | Remember
  216                      | Statement

  217 Value: CHARACTER
  218      | Constant
  219      | Pronoun
  220      | BinaryOperator Value AND Value
  221      | UnaryOperator Value
  222      | BinaryOperator Value AND error
  223      | BinaryOperator Value error Value
  224      | BinaryOperator error AND Value
  225      | UnaryOperator error


Terminals, with rules where they appear

$end (0) 0
error (256) 4 5 15 16 22 41 42 43 44 46 47 49 54 55 56 57 58 59 60
    61 62 65 67 68 75 76 87 90 91 92 106 107 108 111 112 114 115 122
    123 126 133 134 135 136 137 138 139 140 141 222 223 224 225
ARTICLE (258) 29 146
BE (259) 105 106 107 108 130 132 133 134 138 139 140 147
CHARACTER (260) 14 16 19 20 36 38 74 75 76 148 217
FIRST_PERSON (261) 101 149
FIRST_PERSON_POSSESSIVE (262) 30 150
FIRST_PERSON_REFLEXIVE (263) 102 151
NEGATIVE_ADJECTIVE (264) 8 78 81 95 152
NEGATIVE_COMPARATIVE (265) 77 153
NEGATIVE_NOUN (266) 83 154
NEUTRAL_ADJECTIVE (267) 7 82 98 155
NEUTRAL_NOUN (268) 99 156
NOTHING (269) 33 157
POSITIVE_ADJECTIVE (270) 6 79 94 97 158
POSITIVE_COMPARATIVE (271) 93 159
POSITIVE_NOUN (272) 100 160
SECOND_PERSON (273) 103 130 131 132 133 134 135 136 137 138 139 140
    141 161
SECOND_PERSON_POSSESSIVE (274) 31 51 52 57 58 60 61 86 162
SECOND_PERSON_REFLEXIVE (275) 104 163
THIRD_PERSON_POSSESSIVE (276) 32 164
COLON (277) 3 4 74 75 121 122
COMMA (278) 14 15 20 125 165
EXCLAMATION_MARK (279) 142
LEFT_BRACKET (280) 36 37 38 39 40 41 42 43 44
PERIOD (281) 143
QUESTION_MARK (282) 109
RIGHT_BRACKET (283) 36 37 38 39 40 41 42 43 44
AND (284) 19 166 220 222 224
AS (285) 45 46 47 167
ENTER (286) 36 37 41 168
EXEUNT (287) 39 40 43 169
EXIT (288) 38 42 170
HEART (289) 50 52 56 59 61 171
IF_NOT (290) 28 172
IF_SO (291) 27 173
LESS (292) 79 95 174
LET_US (293) 69 175
LISTEN_TO (294) 52 56 58 61 176
MIND (295) 51 53 55 60 62 177
MORE (296) 78 94 178
NOT (297) 25 179
OPEN (298) 86 87 180
PROCEED_TO (299) 72 181
RECALL (300) 110 111 112 182
REMEMBER (301) 113 114 115 183
RETURN_TO (302) 73 184
SPEAK (303) 51 55 57 60 185
THAN (304) 48 186
THE_CUBE_OF (305) 187 206
THE_DIFFERENCE_BETWEEN (306) 9 188
THE_FACTORIAL_OF (307) 189 207
THE_PRODUCT_OF (308) 10 190
THE_QUOTIENT_BETWEEN (309) 11 191
THE_REMAINDER_OF_THE_QUOTIENT_BETWEEN (310) 12 192
THE_SQUARE_OF (311) 193 208
THE_SQUARE_ROOT_OF (312) 194 209
THE_SUM_OF (313) 13 195
TWICE (314) 196 210
WE_MUST (315) 70 197
WE_SHALL (316) 71 198
ACT_ROMAN (317) 3 4 5 63 199
SCENE_ROMAN (318) 64 121 122 123 200
ROMAN_NUMBER (319) 201
NONMATCH (320) 202


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
Act (67)
    on left: 1 2, on right: 2 88 89 91 92
ActHeader (68)
    on left: 3 4 5, on right: 1
Adjective (69)
    on left: 6 7 8, on right: 45 47
BinaryOperator (70)
    on left: 9 10 11 12 13, on right: 220 222 223 224
CharacterDeclaration (71)
    on left: 14 15 16, on right: 17 18
CharacterDeclarationList (72)
    on left: 17 18, on right: 18 88 90 92
CharacterList (73)
    on left: 19 20, on right: 20 37 39
Comment (74)
    on left: 21 22, on right: 3 4 5 14 15 16 121 122 123
Comparative (75)
    on left: 23 24, on right: 48 49
Comparison (76)
    on left: 25 26, on right: 105 106 108
Conditional (77)
    on left: 27 28, on right: 125 126
Constant (78)
    on left: 29 30 31 32 33, on right: 130 133 135 218
EndSymbol (79)
    on left: 34 35, on right: 3 5 14 15 16 121 123 203
EnterExit (80)
    on left: 36 37 38 39 40 41 42 43 44, on right: 117 119
Equality (81)
    on left: 45 46 47, on right: 84 132 138 139 141
Inequality (82)
    on left: 48 49, on right: 85
InOut (83)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62, on right: 211
Jump (84)
    on left: 63 64 65, on right: 212
JumpPhrase (85)
    on left: 66 67 68, on right: 63 64 65
JumpPhraseBeginning (86)
    on left: 69 70 71, on right: 66 68
JumpPhraseEnd (87)
    on left: 72 73, on right: 66 67
Line (88)
    on left: 74 75 76, on right: 118 120
NegativeComparative (89)
    on left: 77 78 79, on right: 23
NegativeConstant (90)
    on left: 80 81 82, on right: 81 82 205
NegativeNoun (91)
    on left: 83, on right: 80
NonnegatedComparison (92)
    on left: 84 85, on right: 25 26
OpenYour (93)
    on left: 86 87, on right: 50 53 54 59 62
Play (94)
    on left: 88 89 90 91 92, on right: 89 129
PositiveComparative (95)
    on left: 93 94 95, on right: 24
PositiveConstant (96)
    on left: 96 97 98, on right: 97 98 204
PositiveNoun (97)
    on left: 99 100, on right: 96
Pronoun (98)
    on left: 101 102 103 104, on right: 219
Question (99)
    on left: 105 106 107 108, on right: 213
QuestionSymbol (100)
    on left: 109, on right: 34 105 106 107 108
Recall (101)
    on left: 110 111 112, on right: 214
Remember (102)
    on left: 113 114 115, on right: 215
Scene (103)
    on left: 116, on right: 1 2
SceneContents (104)
    on left: 117 118 119 120, on right: 116 119 120
SceneHeader (105)
    on left: 121 122 123, on right: 116
Sentence (106)
    on left: 124 125 126, on right: 127 128
SentenceList (107)
    on left: 127 128, on right: 74 76 128
StartSymbol (108)
    on left: 129, on right: 0
Statement (109)
    on left: 130 131 132 133 134 135 136 137 138 139 140 141, on right:
    216
StatementSymbol (110)
    on left: 142 143, on right: 35 50 51 52 53 54 55 56 57 58 63 64
    65 110 111 113 114 130 131 132 134 135 137 139 140 141
String (111)
    on left: 144 145, on right: 21 110 112 145 203
StringSymbol (112)
    on left: 146 147 148 149 150 151 152 153 154 155 156 157 158 159
    160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175
    176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191
    192 193 194 195 196 197 198 199 200 201 202, on right: 144 145
Title (113)
    on left: 203, on right: 88 90 91
UnarticulatedConstant (114)
    on left: 204 205, on right: 29 30 31 32 131 136
UnaryOperator (115)
    on left: 206 207 208 209 210, on right: 221 225
UnconditionalSentence (116)
    on left: 211 212 213 214 215 216, on right: 124 125 126
Value (117)
    on left: 217 218 219 220 221 222 223 224 225, on right: 105 106
    107 108 113 115 132 138 140 141 220 221 222 223 224


state 0

    0 $accept: . StartSymbol $end

    error                                  shift, and go to state 1
    ARTICLE                                shift, and go to state 2
    BE                                     shift, and go to state 3
    CHARACTER                              shift, and go to state 4
    FIRST_PERSON                           shift, and go to state 5
    FIRST_PERSON_POSSESSIVE                shift, and go to state 6
    FIRST_PERSON_REFLEXIVE                 shift, and go to state 7
    NEGATIVE_ADJECTIVE                     shift, and go to state 8
    NEGATIVE_COMPARATIVE                   shift, and go to state 9
    NEGATIVE_NOUN                          shift, and go to state 10
    NEUTRAL_ADJECTIVE                      shift, and go to state 11
    NEUTRAL_NOUN                           shift, and go to state 12
    NOTHING                                shift, and go to state 13
    POSITIVE_ADJECTIVE                     shift, and go to state 14
    POSITIVE_COMPARATIVE                   shift, and go to state 15
    POSITIVE_NOUN                          shift, and go to state 16
    SECOND_PERSON                          shift, and go to state 17
    SECOND_PERSON_POSSESSIVE               shift, and go to state 18
    SECOND_PERSON_REFLEXIVE                shift, and go to state 19
    THIRD_PERSON_POSSESSIVE                shift, and go to state 20
    COMMA                                  shift, and go to state 21
    AND                                    shift, and go to state 22
    AS                                     shift, and go to state 23
    ENTER                                  shift, and go to state 24
    EXEUNT                                 shift, and go to state 25
    EXIT                                   shift, and go to state 26
    HEART                                  shift, and go to state 27
    IF_NOT                                 shift, and go to state 28
    IF_SO                                  shift, and go to state 29
    LESS                                   shift, and go to state 30
    LET_US                                 shift, and go to state 31
    LISTEN_TO                              shift, and go to state 32
    MIND                                   shift, and go to state 33
    MORE                                   shift, and go to state 34
    NOT                                    shift, and go to state 35
    OPEN                                   shift, and go to state 36
    PROCEED_TO                             shift, and go to state 37
    RECALL                                 shift, and go to state 38
    REMEMBER                               shift, and go to state 39
    RETURN_TO                              shift, and go to state 40
    SPEAK                                  shift, and go to state 41
    THAN                                   shift, and go to state 42
    THE_CUBE_OF                            shift, and go to state 43
    THE_DIFFERENCE_BETWEEN                 shift, and go to state 44
    THE_FACTORIAL_OF                       shift, and go to state 45
    THE_PRODUCT_OF                         shift, and go to state 46
    THE_QUOTIENT_BETWEEN                   shift, and go to state 47
    THE_REMAINDER_OF_THE_QUOTIENT_BETWEEN  shift, and go to state 48
    THE_SQUARE_OF                          shift, and go to state 49
    THE_SQUARE_ROOT_OF                     shift, and go to state 50
    THE_SUM_OF                             shift, and go to state 51
    TWICE                                  shift, and go to state 52
    WE_MUST                                shift, and go to state 53
    WE_SHALL                               shift, and go to state 54
    ACT_ROMAN                              shift, and go to state 55
    SCENE_ROMAN                            shift, and go to state 56
    ROMAN_NUMBER                           shift, and go to state 57
    NONMATCH                               shift, and go to state 58

    Play          go to state 59
    StartSymbol   go to state 60
    String        go to state 61
    StringSymbol  go to state 62
    Title         go to state 63


state 1

   92 Play: error . CharacterDeclarationList Act

    error      shift, and go to state 64
    CHARACTER  shift, and go to state 65

    CharacterDeclaration      go to state 66
    CharacterDeclarationList  go to state 67


state 2

  146 StringSymbol: ARTICLE .

    $default  reduce using rule 146 (StringSymbol)


state 3

  147 StringSymbol: BE .

    $default  reduce using rule 147 (StringSymbol)


state 4

  148 StringSymbol: CHARACTER .

    $default  reduce using rule 148 (StringSymbol)


state 5

  149 StringSymbol: FIRST_PERSON .

    $default  reduce using rule 149 (StringSymbol)


state 6

  150 StringSymbol: FIRST_PERSON_POSSESSIVE .

    $default  reduce using rule 150 (StringSymbol)


state 7

  151 StringSymbol: FIRST_PERSON_REFLEXIVE .

    $default  reduce using rule 151 (StringSymbol)


state 8

  152 StringSymbol: NEGATIVE_ADJECTIVE .

    $default  reduce using rule 152 (StringSymbol)


state 9

  153 StringSymbol: NEGATIVE_COMPARATIVE .

    $default  reduce using rule 153 (StringSymbol)


state 10

  154 StringSymbol: NEGATIVE_NOUN .

    $default  reduce using rule 154 (StringSymbol)


state 11

  155 StringSymbol: NEUTRAL_ADJECTIVE .

    $default  reduce using rule 155 (StringSymbol)


state 12

  156 StringSymbol: NEUTRAL_NOUN .

    $default  reduce using rule 156 (StringSymbol)


state 13

  157 StringSymbol: NOTHING .

    $default  reduce using rule 157 (StringSymbol)


state 14

  158 StringSymbol: POSITIVE_ADJECTIVE .

    $default  reduce using rule 158 (StringSymbol)


state 15

  159 StringSymbol: POSITIVE_COMPARATIVE .

    $default  reduce using rule 159 (StringSymbol)


state 16

  160 StringSymbol: POSITIVE_NOUN .

    $default  reduce using rule 160 (StringSymbol)


state 17

  161 StringSymbol: SECOND_PERSON .

    $default  reduce using rule 161 (StringSymbol)


state 18

  162 StringSymbol: SECOND_PERSON_POSSESSIVE .

    $default  reduce using rule 162 (StringSymbol)


state 19

  163 StringSymbol: SECOND_PERSON_REFLEXIVE .

    $default  reduce using rule 163 (StringSymbol)


state 20

  164 StringSymbol: THIRD_PERSON_POSSESSIVE .

    $default  reduce using rule 164 (StringSymbol)


state 21

  165 StringSymbol: COMMA .

    $default  reduce using rule 165 (StringSymbol)


state 22

  166 StringSymbol: AND .

    $default  reduce using rule 166 (StringSymbol)


state 23

  167 StringSymbol: AS .

    $default  reduce using rule 167 (StringSymbol)


state 24

  168 StringSymbol: ENTER .

    $default  reduce using rule 168 (StringSymbol)


state 25

  169 StringSymbol: EXEUNT .

    $default  reduce using rule 169 (StringSymbol)


state 26

  170 StringSymbol: EXIT .

    $default  reduce using rule 170 (StringSymbol)


state 27

  171 StringSymbol: HEART .

    $default  reduce using rule 171 (StringSymbol)


state 28

  172 StringSymbol: IF_NOT .

    $default  reduce using rule 172 (StringSymbol)


state 29

  173 StringSymbol: IF_SO .

    $default  reduce using rule 173 (StringSymbol)


state 30

  174 StringSymbol: LESS .

    $default  reduce using rule 174 (StringSymbol)


state 31

  175 StringSymbol: LET_US .

    $default  reduce using rule 175 (StringSymbol)


state 32

  176 StringSymbol: LISTEN_TO .

    $default  reduce using rule 176 (StringSymbol)


state 33

  177 StringSymbol: MIND .

    $default  reduce using rule 177 (StringSymbol)


state 34

  178 StringSymbol: MORE .

    $default  reduce using rule 178 (StringSymbol)


state 35

  179 StringSymbol: NOT .

    $default  reduce using rule 179 (StringSymbol)


state 36

  180 StringSymbol: OPEN .

    $default  reduce using rule 180 (StringSymbol)


state 37

  181 StringSymbol: PROCEED_TO .

    $default  reduce using rule 181 (StringSymbol)


state 38

  182 StringSymbol: RECALL .

    $default  reduce using rule 182 (StringSymbol)


state 39

  183 StringSymbol: REMEMBER .

    $default  reduce using rule 183 (StringSymbol)


state 40

  184 StringSymbol: RETURN_TO .

    $default  reduce using rule 184 (StringSymbol)


state 41

  185 StringSymbol: SPEAK .

    $default  reduce using rule 185 (StringSymbol)


state 42

  186 StringSymbol: THAN .

    $default  reduce using rule 186 (StringSymbol)


state 43

  187 StringSymbol: THE_CUBE_OF .

    $default  reduce using rule 187 (StringSymbol)


state 44

  188 StringSymbol: THE_DIFFERENCE_BETWEEN .

    $default  reduce using rule 188 (StringSymbol)


state 45

  189 StringSymbol: THE_FACTORIAL_OF .

    $default  reduce using rule 189 (StringSymbol)


state 46

  190 StringSymbol: THE_PRODUCT_OF .

    $default  reduce using rule 190 (StringSymbol)


state 47

  191 StringSymbol: THE_QUOTIENT_BETWEEN .

    $default  reduce using rule 191 (StringSymbol)


state 48

  192 StringSymbol: THE_REMAINDER_OF_THE_QUOTIENT_BETWEEN .

    $default  reduce using rule 192 (StringSymbol)


state 49

  193 StringSymbol: THE_SQUARE_OF .

    $default  reduce using rule 193 (StringSymbol)


state 50

  194 StringSymbol: THE_SQUARE_ROOT_OF .

    $default  reduce using rule 194 (StringSymbol)


state 51

  195 StringSymbol: THE_SUM_OF .

    $default  reduce using rule 195 (StringSymbol)


state 52

  196 StringSymbol: TWICE .

    $default  reduce using rule 196 (StringSymbol)


state 53

  197 StringSymbol: WE_MUST .

    $default  reduce using rule 197 (StringSymbol)


state 54

  198 StringSymbol: WE_SHALL .

    $default  reduce using rule 198 (StringSymbol)


state 55

  199 StringSymbol: ACT_ROMAN .

    $default  reduce using rule 199 (StringSymbol)


state 56

  200 StringSymbol: SCENE_ROMAN .

    $default  reduce using rule 200 (StringSymbol)


state 57

  201 StringSymbol: ROMAN_NUMBER .

    $default  reduce using rule 201 (StringSymbol)


state 58

  202 StringSymbol: NONMATCH .

    $default  reduce using rule 202 (StringSymbol)


state 59

   89 Play: Play . Act
  129 StartSymbol: Play .

    ACT_ROMAN  shift, and go to state 68

    $default  reduce using rule 129 (StartSymbol)

    Act        go to state 69
    ActHeader  go to state 70


state 60

    0 $accept: StartSymbol . $end

    $end  shift, and go to state 71


state 61

  145 String: String . StringSymbol
  203 Title: String . EndSymbol

    ARTICLE                                shift, and go to state 2
    BE                                     shift, and go to state 3
    CHARACTER                              shift, and go to state 4
    FIRST_PERSON                           shift, and go to state 5
    FIRST_PERSON_POSSESSIVE                shift, and go to state 6
    FIRST_PERSON_REFLEXIVE                 shift, and go to state 7
    NEGATIVE_ADJECTIVE                     shift, and go to state 8
    NEGATIVE_COMPARATIVE                   shift, and go to state 9
    NEGATIVE_NOUN                          shift, and go to state 10
    NEUTRAL_ADJECTIVE                      shift, and go to state 11
    NEUTRAL_NOUN                           shift, and go to state 12
    NOTHING                                shift, and go to state 13
    POSITIVE_ADJECTIVE                     shift, and go to state 14
    POSITIVE_COMPARATIVE                   shift, and go to state 15
    POSITIVE_NOUN                          shift, and go to state 16
    SECOND_PERSON                          shift, and go to state 17
    SECOND_PERSON_POSSESSIVE               shift, and go to state 18
    SECOND_PERSON_REFLEXIVE                shift, and go to state 19
    THIRD_PERSON_POSSESSIVE                shift, and go to state 20
    COMMA                                  shift, and go to state 21
    EXCLAMATION_MARK                       shift, and go to state 72
    PERIOD                                 shift, and go to state 73
    QUESTION_MARK                          shift, and go to state 74
    AND                                    shift, and go to state 22
    AS                                     shift, and go to state 23
    ENTER                                  shift, and go to state 24
    EXEUNT                                 shift, and go to state 25
    EXIT                                   shift, and go to state 26
    HEART                                  shift, and go to state 27
    IF_NOT                                 shift, and go to state 28
    IF_SO                                  shift, and go to state 29
    LESS                                   shift, and go to state 30
    LET_US                                 shift, and go to state 31
    LISTEN_TO                              shift, and go to state 32
    MIND                                   shift, and go to state 33
    MORE                                   shift, and go to state 34
    NOT                                    shift, and go to state 35
    OPEN                                   shift, and go to state 36
    PROCEED_TO                             shift, and go to state 37
    RECALL                                 shift, and go to state 38
    REMEMBER                               shift, and go to state 39
    RETURN_TO                              shift, and go to state 40
    SPEAK                                  shift, and go to state 41
    THAN                                   shift, and go to state 42
    THE_CUBE_OF                            shift, and go to state 43
    THE_DIFFERENCE_BETWEEN                 shift, and go to state 44
    THE_FACTORIAL_OF                       shift, and go to state 45
    THE_PRODUCT_OF                         shift, and go to state 46
    THE_QUOTIENT_BETWEEN                   shift, and go to state 47
    THE_REMAINDER_OF_THE_QUOTIENT_BETWEEN  shift, and go to state 48
    THE_SQUARE_OF                          shift, and go to state 49
    THE_SQUARE_ROOT_OF                     shift, and go to state 50
    THE_SUM_OF                             shift, and go to state 51
    TWICE                                  shift, and go to state 52
    WE_MUST                                shift, and go to state 53
    WE_SHALL                               shift, and go to state 54
    ACT_ROMAN                              shift, and go to state 55
    SCENE_ROMAN                            shift, and go to state 56
    ROMAN_NUMBER                           shift, and go to state 57
    NONMATCH                               shift, and go to state 58

    EndSymbol        go to state 75
    QuestionSymbol   go to state 76
    StatementSymbol  go to state 77
    StringSymbol     go to state 78


state 62

  144 String: StringSymbol .

    $default  reduce using rule 144 (String)


state 63

   88 Play: Title . CharacterDeclarationList Act
   90     | Title . CharacterDeclarationList error
   91     | Title . error Act

    error      shift, and go to state 79
    CHARACTER  shift, and go to state 65

    CharacterDeclaration      go to state 66
    CharacterDeclarationList  go to state 80


state 64

   15 CharacterDeclaration: error . COMMA Comment EndSymbol

    COMMA  shift, and go to state 81


state 65

   14 CharacterDeclaration: CHARACTER . COMMA Comment EndSymbol
   16                     | CHARACTER . error Comment EndSymbol

    error  shift, and go to state 82
    COMMA  shift, and go to state 83


state 66

   17 CharacterDeclarationList: CharacterDeclaration .

    $default  reduce using rule 17 (CharacterDeclarationList)


state 67

   18 CharacterDeclarationList: CharacterDeclarationList . CharacterDeclaration
   92 Play: error CharacterDeclarationList . Act

    error      shift, and go to state 64
    CHARACTER  shift, and go to state 65
    ACT_ROMAN  shift, and go to state 68

    Act                   go to state 84
    ActHeader             go to state 70
    CharacterDeclaration  go to state 85


state 68

    3 ActHeader: ACT_ROMAN . COLON Comment EndSymbol
    4          | ACT_ROMAN . COLON Comment error
    5          | ACT_ROMAN . error Comment EndSymbol

    error  shift, and go to state 86
    COLON  shift, and go to state 87


state 69

    2 Act: Act . Scene
   89 Play: Play Act .

    SCENE_ROMAN  shift, and go to state 88

    $default  reduce using rule 89 (Play)

    Scene        go to state 89
    SceneHeader  go to state 90


state 70

    1 Act: ActHeader . Scene

    SCENE_ROMAN  shift, and go to state 88

    Scene        go to state 91
    SceneHeader  go to state 90


state 71

    0 $accept: StartSymbol $end .

    $default  accept


state 72

  142 StatementSymbol: EXCLAMATION_MARK .

    $default  reduce using rule 142 (StatementSymbol)


state 73

  143 StatementSymbol: PERIOD .

    $default  reduce using rule 143 (StatementSymbol)


state 74

  109 QuestionSymbol: QUESTION_MARK .

    $default  reduce using rule 109 (QuestionSymbol)


state 75

  203 Title: String EndSymbol .

    $default  reduce using rule 203 (Title)


state 76

   34 EndSymbol: QuestionSymbol .

    $default  reduce using rule 34 (EndSymbol)


state 77

   35 EndSymbol: StatementSymbol .

    $default  reduce using rule 35 (EndSymbol)


state 78

  145 String: String StringSymbol .

    $default  reduce using rule 145 (String)


state 79

   15 CharacterDeclaration: error . COMMA Comment EndSymbol
   91 Play: Title error . Act

    COMMA      shift, and go to state 81
    ACT_ROMAN  shift, and go to state 68

    Act        go to state 92
    ActHeader  go to state 70


state 80

   18 CharacterDeclarationList: CharacterDeclarationList . CharacterDeclaration
   88 Play: Title CharacterDeclarationList . Act
   90     | Title CharacterDeclarationList . error

    error      shift, and go to state 93
    CHARACTER  shift, and go to state 65
    ACT_ROMAN  shift, and go to state 68

    Act                   go to state 94
    ActHeader             go to state 70
    CharacterDeclaration  go to state 85


state 81

   15 CharacterDeclaration: error COMMA . Comment EndSymbol
